# arttal

./: .gitignore  README.md  arttal.cabal
.io/: build  run
.io/i/: art  font.py  locale  merge.ff
lib/: Art.hs  Etc.hs  Tal.hs
src/: Main.hs
web/: index.html
web/o/: log  m
web/o/font/: log
web/o/font/art/: font-face.css  font.ttc
web/o/font/art.mono/: font-face.css  font.ttc
